Bug 248768 parser code for IMAP and addrbook: stroken_r: pull end-of-string checks out of char-delimiter loop patch by Hans-A.Engel@unibas.ch r=bienvenu sr=neil