mailnews/imap/src/nsIMAPGenericParser.cpp
@@ -92,24 +92,19 @@ cont:
   
   /*
 	 * Scan token (scan for delimiters: s += strcspn(s, delim), sort of).
-         * Note that delim must have one NUL; we stop if we see that, too.
 	 */
-  for (tok = s;;) {
-    c = *s++;
-    spanp = delim;
-    do {
-      if ((sc = *spanp++) == c) {
-        if (c == 0)
-          s = NULL;
-        else
+  tok = s;
+  while ((c = *s++)) {
+    for (spanp = delim; (sc = *spanp++);) {
+      if (sc == c) {
           s[-1] = 0;
         *stringp = s;
         return( (char *) tok );
       }
-    } while (sc != 0);
+    }
   }
-  /* NOTREACHED */
-  return (NULL);
+  *stringp = NULL;
+  return( (char *) tok );
 }
 
 
